[Fix] Fixed the issue with displaying login/registration background on server. Use better contrasting font color when displaying footer on login/registration.

--- a/src/component/Footer.scss
+++ b/src/component/Footer.scss
@@ -1,6 +1,6 @@
 footer {
-  border-top: 1px solid rgba(128,128,128,0.2);
-  background: rgba(192,192,192,0.2);
+  border-top: 1px solid rgba(128, 128, 128, 0.2);
+  background: rgba(192, 192, 192, 0.2);
   color: #333;
 }
 
@@ -8,3 +8,6 @@ footer a {
   color: inherit;
 }
 
+.footer-dark {
+  color: #ffffff;
+}
